--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,10 @@
 name = "ufwlog"
 version = "0.1.0"
 edition = "2021"
+description = "A program to parse, format and export ufw log."
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = { version = "4.5.4", features = ["derive"] }
 csv = "1.3.0"
