--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ description = "A program to parse, format and export ufw log."
 [dependencies]
 clap = { version = "4.5.4", features = ["derive"] }
 csv = "1.3.0"
+indicatif = "0.17.8"
