--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,6 @@ clap = { version = "4.5.4", features = ["derive"] }
 clap_complete = "4.5.38"
 csv = "1.3.0"
 indicatif = "0.17.8"
+
+[dev-dependencies]
+assert_cmd = "2.0.16"
